tools/crates/vendor/toml_edit/tests/fixtures/invalid/key/no-eol.stderr
TOML parse error at line 1, column 7
  |
1 | a = 1 b = 2
  |       ^
expected newline, `#`
